Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Fixed security declarations on some methods.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Switched to new stable version of ooo2dbk which includes many small bugfixes.